--- a/ponder/team01.html
+++ b/ponder/team01.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8" />
     <title>BYU-Idaho WDD 330 | Team</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="../../css/prism-coy.css" />
-    <link rel="stylesheet" href="../../css/course.css" />
+    <link rel="stylesheet" href="../css/prism-coy.css" />
+    <link rel="stylesheet" href="../css/course.css" />
   </head>
 
   <body>
@@ -64,7 +64,7 @@
               <ol>
                 <li>
                   Each member of the team should have already completed the
-                  <a href="../../resources/course-setup.html">course setup</a>
+                  <a href="../resources/course-setup.html">course setup</a>
                   activity. Go and do that now if you have not.
                 </li>
                 <li>
@@ -77,7 +77,7 @@
                   prompt for your operating system. Here are some quickstarts
                   for the
                   <a
-                    href="../../resources/cmd-line-mac.html"
+                    href="../resources/cmd-line-mac.html"
                     target="_blank"
                     rel="noreferrer"
                     style="outline: none"
@@ -85,7 +85,7 @@
                   >
                   and the
                   <a
-                    href="../../resources/cmd-line-pc.html"
+                    href="../resources/cmd-line-pc.html"
                     target="_blank"
                     rel="noreferrer"
                     style="outline: none"
@@ -334,7 +334,7 @@
                   <div class="fig-block">
                     <figure>
                       <img
-                        src="../../images/330-merge-confilict.PNG"
+                        src="../images/330-merge-confilict.PNG"
                         alt="merge error from Github"
                       />
                     </figure>
@@ -493,7 +493,7 @@
       <!-- end #article -->
     </div>
 
-    <script src="../../js/course.js"></script>
-    <script src="../../js/prism.js"></script>
+    <script src="../js/course.js"></script>
+    <script src="../js/prism.js"></script>
   </body>
 </html>
