--- a/prepare/week01.html
+++ b/prepare/week01.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8" />
     <title>BYU-Idaho WDD 330 | Prepare</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="../../css/prism-coy.css" />
-    <link rel="stylesheet" href="../../css/course.css" />
+    <link rel="stylesheet" href="../css/prism-coy.css" />
+    <link rel="stylesheet" href="../css/course.css" />
   </head>
 
   <body>
@@ -182,7 +182,7 @@
             Read through this short article about modern front-end development
             workflow
             <a
-              href="../../resources/workflow-info-only.html"
+              href="../resources/workflow-info-only.html"
               target="_blank"
               rel="noreferrer"
               >modern front-end development workflow</a
@@ -191,7 +191,7 @@
           <li>
             Complete the instructions found in the
             <a
-              href="../../resources/course-setup.html"
+              href="../resources/course-setup.html"
               target="_blank"
               rel="noreferrer"
               >course setup activity</a
@@ -217,7 +217,7 @@
       <!-- end #article -->
     </div>
 
-    <script src="../../js/course.js"></script>
-    <script src="../../js/prism.js"></script>
+    <script src="../js/course.js"></script>
+    <script src="../js/prism.js"></script>
   </body>
 </html>
