--- a/prove/proposal.html
+++ b/prove/proposal.html
@@ -1,11 +1,80 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-us">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <meta charset="utf-8" />
+    <title>BYU-Idaho - WDD 330 - Mobile Application Development</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <link rel="stylesheet" href="../css/course.css" />
   </head>
+
   <body>
-    Challenge Proposal
+    <div id="content">
+      <header class="headerBanner">
+        <div>
+          <h1><span>Web</span> Frontend Development II</h1>
+          <h2>WDD 330</h2>
+        </div>
+      </header>
+      <main>
+        <h1>Team Challenge Proposal</h1>
+        <hr />
+
+        <h2>Description</h2>
+        <p>
+          By now your team should have settled on one idea for your project.
+          This week a more detailed project proposal will be required.
+        </p>
+
+        <h2>The Proposal</h2>
+        <p>
+          Your proposal can take many forms, but should show that you have
+          thought through your idea enough to understand what will be required
+          and that the complexity matches the time available. It should also
+          show how it will meet the following project requirements:
+        </p>
+        <ul>
+          <li>Includes authentication and user management</li>
+          <li>Performs GET/POST/PUT/DELETE against the backend API</li>
+          <li>All exposed features should work 100%</li>
+          <li>
+            Should be a combination of static and dynamically generated Markup.
+          </li>
+          <li>Should incorporate animation</li>
+          <li>
+            Code should show a good level of organization (ESmodules, classes,
+            etc)
+          </li>
+          <li>Code should be error free (according to team ESLint rules)</li>
+        </ul>
+        <p>Below is a list of required sections for you proposal</p>
+        <ol>
+          <li>
+            An Overview of the idea. Why are we doing this? What is the problem
+            we are trying to solve?
+          </li>
+          <li>Who is the audience?</li>
+          <li>
+            List of the major functions of the application. What will it do?
+            List these in as much detail as you can.
+          </li>
+          <li>Wireframes of the major views</li>
+          <li>
+            Link to a Trello board with all the tasks you can think of at this
+            point defined as cards. Again be as detailed as possible here.
+          </li>
+        </ol>
+        <p>
+          For the Trello board you can choose to have it be just for the
+          frontend related tasks, or include the backend tasks as well. The
+          Trello board is also a living document. It won't be done when you turn
+          it in...and will certainly change. Still, being as thorough as you can
+          here will make sure that you have thought this thing through :)
+        </p>
+        <p>Submit your proposal.</p>
+        <!-- end #article -->
+      </main>
+    </div>
+    <script src="../js/course.js"></script>
   </body>
 </html>
