--- a/prove/introduction.html
+++ b/prove/introduction.html
@@ -73,10 +73,10 @@
             set up with a channel for your team if you want to use it.)
           </li>
           <li>
-            Brainstorm a list of application ideas that sound interesting. These
-            ideas should require a backend and frontend. There should be a
-            database and user management of some sort (which means
-            authentication).
+            Brainstorm a list of application ideas that sound interesting
+            (5-10). These ideas should require a backend and frontend. There
+            should be a need for a database and user management of some sort
+            (which means authentication).
           </li>
         </ol>
         <p>
