--- a/prove/proposal.html
+++ b/prove/proposal.html
@@ -47,10 +47,10 @@
           </li>
           <li>Code should be error free (according to team ESLint rules)</li>
         </ul>
-        <p>Below is a list of required sections for you proposal</p>
+        <p>Below is a list of required sections for your proposal</p>
         <ol>
           <li>
-            An Overview of the idea. Why are we doing this? What is the problem
+            An overview of the idea. Why are we doing this? What is the problem
             we are trying to solve?
           </li>
           <li>Who is the audience?</li>
@@ -58,7 +58,10 @@
             List of the major functions of the application. What will it do?
             List these in as much detail as you can.
           </li>
-          <li>Wireframes of the major views</li>
+          <li>
+            Wireframes of the major views (Mobile and desktop...do the mobile
+            wireframes first!)
+          </li>
           <li>
             Link to a Trello board with all the tasks you can think of at this
             point defined as cards. Again be as detailed as possible here.
