--- a/prove/proposal.html
+++ b/prove/proposal.html
@@ -36,6 +36,7 @@
         <ul>
           <li>Includes authentication and user management</li>
           <li>Performs GET/POST/PUT/DELETE against the backend API</li>
+          <li>Can also use other 3rd party APIs if desired.</li>
           <li>All exposed features should work 100%</li>
           <li>
             Should be a combination of static and dynamically generated Markup.
