--- a/resources/workflow-info-only.html
+++ b/resources/workflow-info-only.html
@@ -72,8 +72,8 @@
           <li>
             Bundlers: bundlers handle the compiling, transpiling, concatinating,
             minifying, and moving around of assets in our project. We are using
-            <code>Parcel</code> as our bundler. Another common bundler is
-            Webpack
+            <code>Snowpack</code> as our bundler. Other common bundlers are
+            Parcel and Webpack.
           </li>
           <li>
             Task managers: these keep track of what needs to be done and when.
