add team5 instructions

--- a/teacher/week01.html
+++ b/teacher/week01.html
@@ -78,17 +78,17 @@
 
         <h2>Meeting Time</h2>
 
-        <p>
+        <!-- <p>
           For your meeting with them you might consider running through the
           tools they are asked to install. You might even initialize a simple
           Node application, and show them how to add packages. They will do more
           of that next week in the team activity.
-        </p>
+        </p> -->
         <p>
-          Or you could review some Javascript concepts. Array methods, fetch,
-          promises, modules would all be good to review. Point out the resources
-          in the syllabus for review! You could fetch some data from something
-          like
+          For you meeting I would review some Javascript concepts. Array
+          methods, fetch, promises, modules would all be good to review. Point
+          out the resources in the syllabus for review! You could fetch some
+          data from something like
           <a href="https://pokeapi.co" target="_blank">PokeApi</a>, or
           <a href="https://www.swapi.tech" target="_blank">Swapi</a>. Use the
           array methods to manipulate it, then build some html and output to the
