add additional git link

--- a/ponder/team01.html
+++ b/ponder/team01.html
@@ -52,6 +52,13 @@
             target="_blank"
             >shorter Github guide</a
           >
+          or this
+          <a
+            href="https://code.visualstudio.com/docs/editor/versioncontrol"
+            target="_blank"
+            >guide specifically about using git with VS Code</a
+          >
+
           (Just remember to go back and do the other...it goes into much more
           detail).
         </p>
